# MyLvgl9.4Project_Ryoma

./: CMakeLists.txt  lv_conf.h
common/inc/: block_queue.h  lock.h
communication/: CMakeLists.txt
communication/inc/: ipc_message_queue.h  ipc_shared_memory.h  ipc_ui_multimedia_command.h
communication/src/: ipc_message_queue.cpp  ipc_shared_memory.cpp
gui_manager/: CMakeLists.txt  lv_conf.defaults  lv_conf.h  user_cross_compile_setup.cmake
gui_manager/lvgl/scripts/: generate_lv_conf.py
gui_manager/src/: main.c  main.cpp
gui_manager/src/IpcUtility/inc/: gui_datamng.h  gui_message_ctrl.h
gui_manager/src/IpcUtility/src/: gui_datamng.cpp  gui_message_ctrl.cpp
gui_manager/src/core/inc/: gui_base_controller.h  gui_base_view.h  gui_core_def.h
gui_manager/src/liveview/controller/inc/: gui_event_frame.h  gui_event_liveview.h  liveview_controller.h
gui_manager/src/liveview/controller/src/: liveview_controller.cpp
gui_manager/src/liveview/view/inc/: gui_liveview.h  gui_video_frame_canvas.h
gui_manager/src/liveview/view/src/: gui_liveview.cpp  gui_video_frame_canvas.cpp
gui_manager/src/navibar/controller/inc/: gui_event_navibar.h  gui_navibar_controller.h
gui_manager/src/navibar/controller/src/: gui_navibar_controller.cpp
gui_manager/src/navibar/view/inc/: gui_navibar_view.h
gui_manager/src/navibar/view/src/: gui_navibar_view.cpp
multimedia/: CMakeLists.txt
multimedia/inc/: mmed_state_matchine_interface.h  property_setting_type_def.h
multimedia/src/: main.cpp
multimedia/src/IpcUtility/inc/: mmed_message_ctrl.h
multimedia/src/IpcUtility/src/: mmed_message_ctrl.cpp
multimedia/src/mmedCtrl/inc/: mmed_controller.h
multimedia/src/mmedCtrl/src/: mmed_controller.cpp
multimedia/src/pipeline/inc/: mmed_pipeline_manager.h
multimedia/src/pipeline/src/: mmed_pipeline_manager.cpp
multimedia/src/settingmanager/inc/: mmed_setproperty_ctrl.h  mmed_setting_manager.h  mmed_system_setting_ctrl.h
multimedia/src/settingmanager/src/: mmed_setproperty_ctrl.cpp  mmed_setting_manager.cpp  mmed_system_setting_ctrl.cpp
multimedia/src/statematchine/inc/: mmed_statematchine.h
multimedia/src/statematchine/src/: mmed_statematchine.cpp
src/: main.c
